--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
  
@@ -23,7 +23,7 @@ body {
   line-height: 1.5;
   color: #6c757d;
   text-align: left;
-  background-color: #ffffff; 
+  background-color: #ffffff;
 }
  
 a {
@@ -47,7 +47,7 @@ h1,h2,h3,h4,h5,h6,p{
 
 
 .text-stroke-header {
-  -webkit-text-stroke: 3px #8f5454;
+  -webkit-text-stroke: 3px #ffffff;
   color: transparent;
 }
 
